<resources>
    <string name="app_name">QuestCalendar</string>
    <string name="title_home">Home</string>
    <string name="title_add">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add_task">Add Task</string>
    <string name="title_profile">Profile</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_daily_quest">Daily Quest</string>
    <string name="monthly_view_button">MONTHLY</string>
    <string name="daily_view_button">DAILY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>