<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.questcalendar.ui.home.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_add_task"
        android:name="com.example.questcalendar.ui.dashboard.AddTaskFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add_task" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.questcalendar.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>